<resources>
    <string name="app_name">MyApp</string>

    <string name="type_something">Type something</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="button_send_notification">Send Notification</string>
    <string name="button_send_progress_notification">Send Progress Notification</string>
    <string name="button_expand_notification">Expand</string>
    <string name="button_remove_notification">Remove</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_enter_not_id">Notification ID:</string>

    <string name="notification">Thanks for checking!</string>
    <string name="title_activity_activity_no_actionbar">ActivityNoActionbar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
